[tool.poetry]
name = "lark_test"
version = "0.1.0"
description = ""
authors = ["085astatine <astatine085@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lark-parser = "^0.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
